--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
     "description": "A list of Sniffs to set naming conventions in variables, properties, methods, function and classes.",
     "type": "phpcodesniffer-standard",
     "require": {
-        "squizlabs/php_codesniffer": "^3.10"
+        "squizlabs/php_codesniffer": "^3.10",
+        "php": "^v8.3"
     },
     "license": "MIT",
     "autoload": {
