Codesniffer expects tests to be in the same namespace as the code

--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Bellangelo\\CodesnifferNamingConventions\\Tests\\": "tests/"
+            "Bellangelo\\CodesnifferNamingConventions\\": "tests/"
         }
     },
     "authors": [
