--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "type": "phpcodesniffer-standard",
     "require": {
         "squizlabs/php_codesniffer": "^3.10",
-        "php": "^v8.3"
+        "php": "^v8.3",
+        "doctrine/inflector": "^2.0"
     },
     "license": "MIT",
     "autoload": {
