--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
     ],
     "require-dev": {
         "phpunit/phpunit": "^11.4",
-        "slevomat/coding-standard": "^8.15"
+        "slevomat/coding-standard": "^8.15",
+        "phpstan/phpstan": "^1.12"
     },
     "config": {
         "allow-plugins": {
