--- a/composer.json
+++ b/composer.json
@@ -8,14 +8,20 @@
         "doctrine/inflector": "^2.0"
     },
     "license": "MIT",
+	"scripts": {
+		"phpcs": "phpcs",
+		"phpcs:fix": "phpcbf",
+		"phpstan": "phpstan analyse",
+		"tests": "phpunit tests"
+	},
     "autoload": {
         "psr-4": {
-            "Bellangelo\\CodesnifferNamingConventions\\": "BellangeloCodingStandards/"
+            "BellangeloCodingStandards\\": "BellangeloCodingStandards/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Bellangelo\\CodesnifferNamingConventions\\": "tests/"
+            "BellangeloCodingStandards\\": "tests/"
         }
     },
     "authors": [
