--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,8 @@
     "require-dev": {
         "phpunit/phpunit": "^11.4",
         "slevomat/coding-standard": "^8.15",
-        "phpstan/phpstan": "^1.12"
+        "phpstan/phpstan": "^1.12",
+        "rector/rector": "^1.2"
     },
     "config": {
         "allow-plugins": {
