--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "bellangelo/codesniffer-naming-conventions",
-    "description": "A list of Sniffs to set naming conventions in variables, properties, methods, function and classes.",
+    "name": "bellangelo/coding-standards",
+    "description": "Bellangelo Coding Standard for PHP_CodeSniffer complements Consistence Coding Standard by providing sniffs with additional checks.",
     "type": "phpcodesniffer-standard",
     "require": {
         "squizlabs/php_codesniffer": "^3.10",
