Dependencies have been copied to root

--- a/.github/workflows/quality-checks.yml
+++ b/.github/workflows/quality-checks.yml
@@ -26,7 +26,7 @@ jobs:
                 coverage: none
             - uses: ramsey/composer-install@v2
             - uses: ./.github/actions/downgrade
-            - run: cd build && composer install
+            - run: composer install
 
     phpcs:
         name: CodeSniffer
