--- a/.github/actions/downgrade/action.yml
+++ b/.github/actions/downgrade/action.yml
@@ -19,8 +19,8 @@ runs:
             shell: bash
 
         # copy PHP 7.4 composer
-        -   run: cp build/composer-php-74.json composer.json
+        -   run: cp -rf build/composer-php-74.json composer.json
             shell: bash
 
-        -   run: cp build/composer-php-74.lock composer.lock
+        -   run: cp -rf build/composer-php-74.lock composer.lock
             shell: bash
