--- a/.github/workflows/quality-checks.yml
+++ b/.github/workflows/quality-checks.yml
@@ -19,6 +19,7 @@ jobs:
         timeout-minutes: 10
 
         steps:
+            - uses: actions/checkout@v3
             - uses: ./.github/actions/downgrade
             - uses: shivammathur/setup-php@v2
               with:
