--- a/.github/actions/downgrade/action.yml
+++ b/.github/actions/downgrade/action.yml
@@ -21,3 +21,6 @@ runs:
         # copy PHP 7.4 composer
         -   run: cp -rf build/composer-php-74.json composer.json
             shell: bash
+
+        -   run: rm composer.lock
+            shell: bash
